# RealWorldHaskell

./: .gitignore  README.md
chapter10/: chapter10.cabal
chapter10/src/Chapter10/: EitherIntFlexible.hs  PNM.hs  Parse.hs  TreeMap.hs
chapter11/: chapter11.cabal
chapter11/src/Chapter11/: Arbitrary.hs  Prettify2.hs  QCBasics.hs
chapter11/test/: Run.hs
chapter13/: chapter13.cabal
chapter13/src/: PasswdAl.hs  PasswdMap.hs
chapter13/src/Chapter13/: BuildMap.hs  DList.hs  FuncRec.hs  FuncRec2.hs  Lookup.hs  Monoid.hs  Num.hs  NumSimple.hs
chapter14/: chapter14.cabal
chapter14/src/Chapter14/: Carrier.hs  CartesianProduct.hs  Logger.hs  MultiplyTo.hs  Random.hs  SimpleState.hs  State.hs
chapter15/: chapter15.cabal
chapter15/src/Chapter15/: HandleIO.hs  MonadHandle.hs  MonadHandleIO.hs  MovieReview.hs  RandomGolf.hs  RandomSupply.hs  SafeHello.hs  Supply.hs  SupplyClass.hs  SupplyInstance.hs  VCard.hs  WriterIO.hs
chapter16/: chapter16.cabal
chapter16/src/: CSV9.hs
chapter16/src/Chapter16/: CSV1.hs  CSV2.hs  CSV5.hs  CSV6.hs  CSV7.hs  CSV8.hs  FormParse.hs  HttpRequestParser.hs  JSONClass.hs  JSONParsec.hs  JSONParser.hs
chapter17/: chapter17.cabal
chapter17/src/: Enum1.hs  SimpleFFI.hs
chapter17/src/Chapter17/: PCRECompile.hs  Regex.hs  Regex.hsc  SimpleFFI.hs
chapter18/: chapter18.cabal
chapter18/src/Chapter18/: CountEntries.hs  CountEntriesT.hs  LocalReader.hs  MaybeT.hs  MaybeTParse.hs  StackStack.hs  UglyStack.hs
chapter19/: chapter19.cabal
chapter19/src/Chapter19/: DivBy1.hs  DivBy2.hs  DivBy2m.hs  DivBy3.hs  DivBy4.hs  DivBy5.hs  DivBy6.hs  DivBy7.hs  DivBy8.hs  ParseInt.hs  SafeTail.hs
chapter20/: chapter20.cabal
chapter20/src/Chapter20/: PosixTime.hs  RunProcess.hs  RunProcessSimple.hs
chapter21/: chapter21.cabal
chapter21/src/Chapter21/: Query.hs
chapter24/: chapter24.cabal
chapter24/src/: Compressor.hs  NumCapabilities.hs  SortMain.hs
chapter24/src/Chapter24/: Chan.hs  MVarExample.hs  NiceFork.hs  Sorting.hs
chapter25/: chapter25.cabal
chapter25/src/: A.hs  B.hs  C.hs  D.hs  E.hs  F.hs  G.hs  H.hs  I.hs
chapter5/: chapter5.cabal
chapter5/src/: Main.hs
chapter5/src/Chapter5/: Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs
chapter6/: chapter6.cabal
chapter6/src/Chapter6/: EqClasses.hs  JSONClass.hs  NaiveEq.hs  SimpleClass.hs
chapter7/: chapter7.cabal
chapter7/src/: BasicIO.hs  CallingPure.hs  TempFile.hs  ToUpperImp.hs  ToUpperLazy1.hs  ToUpperLazy2.hs  ToUpperLazy3.hs  ToUpperLazy4.hs  ToUpperLazy6.hs
chapter8/: chapter8.cabal
chapter8/src/Chapter8/: ElfMagic.hs  Glob.hs  GlobRegex.hs  HighestClose.hs  Useful.hs
chapter9/: chapter9.cabal
chapter9/src/Chapter9/: BetterPredicate.hs  ControlledVisit.hs  FoldDir.hs  RecursiveContents.hs  SimpleFinder.hs
