name:                chapter10
version:             0.1.0.0
synopsis:            Package for Chapter 10
-- description:
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Chapter10.Parse
                       Chapter10.PNM
  other-modules:       Chapter10.EitherIntFlexible
                       Chapter10.TreeMap
  build-depends:       base >=4.6,
                       bytestring >=0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns