name:                chapter13
version:             0.1.0.0
synopsis:            Package for Chapter 13
-- description:
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Chapter13.BuildMap
                       Chapter13.DList
                       Chapter13.FuncRec
                       Chapter13.FuncRec2
                       Chapter13.Lookup
                       Chapter13.Monoid
                       Chapter13.Num
                       Chapter13.NumSimple
  build-depends:       base >=4.6,
                       containers >=0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns

executable passwdal
  main-is:             PasswdAl.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns

executable passwdmap
  main-is:             PasswdMap.hs
  build-depends:       base >=4.6,
                       containers >=0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns