name:                chapter14
version:             0.1.0.0
synopsis:            Package for Chapter 14
-- description:
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Chapter14.Carrier
                       Chapter14.CartesianProduct
                       Chapter14.Logger
                       Chapter14.MultiplyTo
                       Chapter14.Random
                       Chapter14.SimpleState
                       Chapter14.State
  build-depends:       base >=4.6,
                       containers >=0.5,
                       mtl >=2.1,
                       random >=0.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns