name:                chapter15
version:             0.1.0.0
synopsis:            Package for Chapter 15
-- description:
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Chapter15.MovieReview
                       Chapter15.RandomGolf
                       Chapter15.RandomSupply
                       Chapter15.SupplyClass
                       Chapter15.SupplyInstance
                       Chapter15.VCard
  other-modules:       Chapter15.Supply
  build-depends:       base >=4.6,
                       mtl >=2.1,
                       random >=1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns