name:                chapter19
version:             0.1.0.0
synopsis:            Package for Chapter 19
-- description:
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Chapter19.DivBy1
                       Chapter19.DivBy2
                       Chapter19.DivBy2m
                       Chapter19.DivBy3
                       Chapter19.DivBy4
                       Chapter19.DivBy5
                       Chapter19.DivBy6
                       Chapter19.DivBy7
                       Chapter19.DivBy8
                       Chapter19.ParseInt
                       Chapter19.SafeTail
  build-depends:       base >=4.6,
                       bytestring >=0.10,
                       mtl >=2.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns