name:                chapter20
version:             0.1.0.0
synopsis:            Package for Chapter 20
-- description:
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Chapter20.PosixTime
                       Chapter20.RunProcess
                       Chapter20.RunProcessSimple
  build-depends:       base >=4.6,
                       directory >=1.2,
                       process >=1.1,
                       regex-compat >=0.95,
                       time >=1.4,
                       unix >=2.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns