name:                chapter24
version:             0.1.0.0
synopsis:            Package for Chapter 24
-- description:
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Chapter24.Chan
                       Chapter24.MVarExample
                       Chapter24.NiceFork
  build-depends:       base >=4.6,
                       containers >=0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fno-warn-unused-do-bind -fwarn-incomplete-patterns

executable compressor
  main-is:             Compressor.hs
  build-depends:       base >=4.6,
                       bytestring >=0.10,
                       readline >=1.0,
                       zlib >=0.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -threaded -fno-warn-unused-do-bind -fwarn-incomplete-patterns

executable numcapabilities
  main-is:             NumCapabilities.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -threaded -fno-warn-unused-do-bind -fwarn-incomplete-patterns