name:                chapter25
version:             0.1.0.0
synopsis:            Package for Chapter 25
-- description:
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

-- library
--   exposed-modules:     Chapter24.Chan
--                        Chapter24.MVarExample
--                        Chapter24.NiceFork
--                        Chapter24.Sorting
--   build-depends:       base >=4.6,
--                        containers >=0.5,
--                        parallel >=3.2
--   hs-source-dirs:      src
--   default-language:    Haskell2010
--   ghc-options:         -Wall -O2 -fno-warn-unused-do-bind -fno-warn-type-defaults

executable A
  main-is:             A.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -rtsopts -auto-all -caf-all

executable B
  main-is:             B.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-type-defaults -rtsopts -auto-all -caf-all

executable C
  main-is:             C.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-type-defaults -rtsopts -auto-all -caf-all

executable D
  main-is:             D.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-type-defaults -rtsopts -auto-all -caf-all

executable E
  main-is:             E.hs
  build-depends:       base >=4.6,
                       parallel >=3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-type-defaults -rtsopts -auto-all -caf-all

executable F
  main-is:             F.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-type-defaults -rtsopts -auto-all -caf-all

executable G
  main-is:             G.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -fno-warn-type-defaults -funbox-strict-fields -rtsopts -auto-all -caf-all

executable H
  main-is:             H.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -rtsopts -auto-all -caf-all

executable I
  main-is:             I.hs
  build-depends:       base >=4.6,
                       vector >=0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -funbox-strict-fields -rtsopts -auto-all -caf-all
