name:                chapter5
version:             0.1.0.0
synopsis:            Package for Chapter 5
-- description:
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Chapter5.SimpleJSON
                       Chapter5.PutJSON
                       Chapter5.Prettify
                       Chapter5.PrettyJSON
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns

executable simple
  main-is:             Main.hs
  other-modules:       Chapter5.SimpleJSON
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns