name:                chapter7
version:             0.1.0.0
synopsis:            Package for Chapter 7
-- description:
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable basicio
  main-is:             BasicIO.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns

executable callingpure
  main-is:             CallingPure.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns

executable toupper-imp
  main-is:             ToUpperImp.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns

executable tempfile
  main-is:             TempFile.hs
  build-depends:       base >=4.6,
                       directory >=1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns -fno-warn-type-defaults

executable toupper-lazy1
  main-is:             ToUpperLazy1.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns

executable toupper-lazy2
  main-is:             ToUpperLazy2.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns

executable toupper-lazy3
  main-is:             ToUpperLazy3.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns

executable toupper-lazy4
  main-is:             ToUpperLazy4.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns

executable toupper-lazy6
  main-is:             ToUpperLazy6.hs
  build-depends:       base >=4.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns