name:                chapter8
version:             0.1.0.0
synopsis:            Package for Chapter 8
-- description:
-- license:
-- license-file:        LICENSE
author:              Chan Beom Park
maintainer:          chanbeom.park@cern.ch
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Chapter8.ElfMagic
                       Chapter8.GlobRegex
                       Chapter8.HighestClose
  -- other-modules:
  build-depends:       base >=4.6,
                       bytestring >=0.10,
                       regex-posix >=0.95
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O -fwarn-unused-do-bind -fwarn-incomplete-patterns